# BlockStore

./: BlockStore.sln  CMakeLists.txt  LICENSE  README.md
BlockStore/: BlockStore.vcxproj  BlockStore.vcxproj.filters  CMakeLists.txt  Deque.h  ForwardList.h  List.h  block.cpp  block.h  block_cache.cpp  block_cache.h  block_cache_new.h  block_data.h  block_manager.cpp  block_manager.h  block_ref.cpp  block_ref.h  core.h  file_manager.cpp  file_manager.h  layout.h  layout_context.h  layout_traits.h  layout_traits_stl.h  metadata.h  serialize.h  serializer.h  sqlite_helper.cpp  sqlite_helper.h  trivial_serializer.h  uncopyable.h
BlockStore/Item/: Deque.h  Dynamic.cpp  Dynamic.h  ForwardList.h  List.h  OrderedRefMap.h  OrderedRefSet.h  StringTable.h  Tree.h  UnorderedRefSet.h
BlockStore/core/: db.h  gc.h  manager.cpp  manager.h  ref.cpp  ref.h  type.h
BlockStore/data/: block.h  cache.h  serializer.h
BlockStore/utility/: key_ref_comp.h  ref_split_control.h  type_map.h
Test/: CMakeLists.txt  Test.vcxproj  Test.vcxproj.filters  block_test.h  common.h  deque_test.cpp  dict_test.cpp  dynamic_test.cpp  file_test.cpp  file_test.h  forward_list_test.cpp  graph_test.cpp  list_test.cpp  list_test.h  string_test.cpp  test.cpp  tree_test.cpp
